--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7194c3ac",
+   "id": "98e3beb2",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a744cc0",
+   "id": "71a72122",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52edd613",
+   "id": "c6049f75",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9bec13b9",
+   "id": "ec89fccc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "42d1a7b4",
+   "id": "3c227ca8",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4d137ba1",
+   "id": "3e79ce01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fac1ff0",
+   "id": "0911b12d",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62295ee7",
+   "id": "aab3a2c0",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "39f17538",
+   "id": "eb5670f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5a1f4289",
+   "id": "b052f7d9",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6ba8db07",
+   "id": "a215ea9a",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "039b73a3",
+   "id": "c8edfd6e",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "de47f795",
+   "id": "43a4cc4d",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9c64e3e4",
+   "id": "6c036938",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ecc811d5",
+   "id": "54755dc7",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e580d064",
+   "id": "2b5eec3c",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3944c43e",
+   "id": "23b75e7c",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47b164fb",
+   "id": "55ebe6aa",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7236a413",
+   "id": "9360d466",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e42c29c5",
+   "id": "f04025b2",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7e1ec8df",
+   "id": "9d9fce5a",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb5b9048",
+   "id": "95578300",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9c8f2386",
+   "id": "0d6abf65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "95a92ece",
+   "id": "9421085d",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5e197ed9",
+   "id": "e9e8d532",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ea3aa9e9",
+   "id": "606b1c0f",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "73958770",
+   "id": "860331e8",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "42186568",
+   "id": "498774cd",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a8f9f423",
+   "id": "1ee0eb14",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,93 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44685ae5",
+   "id": "531cfe96",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27953c07",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Dicts are mutable\n",
+    "\n",
+    "You might remember that Python data can be *mutable* or *immutable*. The question is whether we can change an existing data structure. This is *not* the same as whether we can assign a value to a variable!\n",
+    "\n",
+    "We can *always* assign a new value to a variable. For example:\n",
+    "\n",
+    "```python\n",
+    "s = 'abcd'      # assigning a string to s\n",
+    "s = s.upper()   # assigning a new string to s \n",
+    "```\n",
+    "\n",
+    "The above is *not* mutable data, though.  Strings are immutable.\n",
+    "\n",
+    "By contrast, lists are mutable. We change a list with `append` and the like, without assigning or re-assigning it to a variable.\n",
+    "\n",
+    "Dictionaries are also mutable. We can change them without re-assigning them to a variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "9b637554",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 2345, 'b': 20, 'c': 30}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {'a':10, 'b':20, 'c':30}\n",
+    "\n",
+    "# how can I modify an existing key-value pair?\n",
+    "# I can update the value by assigning to it\n",
+    "\n",
+    "d['a'] = 2345    # the key 'a' already exists, and we change/update/modify the existing value\n",
+    "\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d6ea8814",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 2345, 'b': 20, 'c': 30, 'x': 987}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# how can I add a new key-value pair to my dict?\n",
+    "# in exactly the same way -- we just assign to a key that doesn't (yet) exist\n",
+    "\n",
+    "d['x'] = 987   # 'x' doesn't exist as a key, so we add a new key-value pair\n",
+    "\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3fc7d08",
    "metadata": {},
    "outputs": [],
    "source": []
