--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "98e3beb2",
+   "id": "d9873ff3",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71a72122",
+   "id": "1feb75e2",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6049f75",
+   "id": "3311aee7",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ec89fccc",
+   "id": "fc7350f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3c227ca8",
+   "id": "55376460",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3e79ce01",
+   "id": "ef62fa87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0911b12d",
+   "id": "eb61eb7a",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aab3a2c0",
+   "id": "53ab72c2",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eb5670f6",
+   "id": "bb2b4b7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b052f7d9",
+   "id": "8a29d62d",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a215ea9a",
+   "id": "73f0fc7c",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c8edfd6e",
+   "id": "e3930d46",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "43a4cc4d",
+   "id": "eb030deb",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6c036938",
+   "id": "1dad86a0",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "54755dc7",
+   "id": "577b7c76",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2b5eec3c",
+   "id": "78b0ff43",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "23b75e7c",
+   "id": "d988b9a0",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55ebe6aa",
+   "id": "33911544",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9360d466",
+   "id": "cd3bf7c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f04025b2",
+   "id": "47f23b06",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9d9fce5a",
+   "id": "83c3d68e",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95578300",
+   "id": "87aa306c",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0d6abf65",
+   "id": "63c7e7eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9421085d",
+   "id": "b8327322",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e9e8d532",
+   "id": "d29443e5",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "606b1c0f",
+   "id": "83f9c6dd",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "860331e8",
+   "id": "0269373d",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "498774cd",
+   "id": "91655e93",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1ee0eb14",
+   "id": "b57a06e0",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "531cfe96",
+   "id": "3f0f86b1",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "27953c07",
+   "id": "a988cce3",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9b637554",
+   "id": "6755cf8f",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d6ea8814",
+   "id": "1735bd08",
    "metadata": {},
    "outputs": [
     {
@@ -837,11 +837,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d3fc7d08",
+   "execution_count": 31,
+   "id": "996b624b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "987"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# how can I remove a key-value pair?\n",
+    "# (by the way, I almost never remove key-value pairs from a dicts)\n",
+    "\n",
+    "d.pop('x')  # this removes the pair with 'x' as a key, and returns its value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d85f5a24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 2345, 'b': 20, 'c': 30}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a11c7ee1",
+   "metadata": {},
+   "source": [
+    "# Dcit"
+   ]
   }
  ],
  "metadata": {
