--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4f745580",
+   "id": "51037c20",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e76f4385",
+   "id": "d2f7ec44",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35b747fd",
+   "id": "070ad2ee",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "01e136cf",
+   "id": "5b3d45fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "68686d0a",
+   "id": "2d2b4c80",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "46136a46",
+   "id": "5ae55ce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03009e78",
+   "id": "2ccfca96",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d94f7b6f",
+   "id": "6bb17c84",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fb61c2a1",
+   "id": "e1de8502",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "013e1c52",
+   "id": "57ecf06a",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "953e27fa",
+   "id": "f9f07d75",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "19c634ad",
+   "id": "e475a111",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2213e22b",
+   "id": "c70776e7",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "886bf951",
+   "id": "bfe253b3",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e7dda33f",
+   "id": "94f51be6",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ac9c34b4",
+   "id": "48693859",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bf7d7aac",
+   "id": "e1eeefe6",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d12baed8",
+   "id": "dcfc4017",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4065a552",
+   "id": "8eee3050",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e949b937",
+   "id": "c52a822f",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4f88f8bb",
+   "id": "7f6920e0",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7cd58b1",
+   "id": "f362d4ec",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "dc8f7c1b",
+   "id": "913ea8ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a9a4c09b",
+   "id": "2c7aed5c",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2f89adbd",
+   "id": "689cb0a5",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6e000023",
+   "id": "fe592fa3",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "01698e72",
+   "id": "2c0212c9",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "2eac1230",
+   "id": "4d7ff874",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0fcd1379",
+   "id": "1af84206",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61753a4d",
+   "id": "e361459f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2b239aab",
+   "id": "ff7b9eb7",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2929bbfb",
+   "id": "cb4b3a7e",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "782ee7eb",
+   "id": "6a405d8f",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "573171f0",
+   "id": "66136f2a",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "653b168d",
+   "id": "78b2c66c",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "758356bc",
+   "id": "46f4721e",
    "metadata": {},
    "source": [
     "# Dicts are always key -> value\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d286c792",
+   "id": "46426ec0",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cda96ab8",
+   "id": "55c893b5",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -927,12 +927,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f68a7044",
+   "metadata": {},
+   "source": [
+    "# Dicts for accumulation (paradigm 2)\n",
+    "\n",
+    "The idea of this dict paradigm is that we create a dictionary with keys and initialized values, typically 0. We won't add keys to the dict while the program runs, but we will increment the values over time, to reflect data we've found.\n",
+    "\n",
+    "For example: Let's say that a list contains integers, and I want to know how many of them are odd, and how many are even."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f298fb4",
+   "id": "19824987",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "numbers = [10, 15, 20, ]"
+   ]
   }
  ],
  "metadata": {
